<resources>

    <string name="app_name">FirebaseChat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="type_message">Type Message</string>

    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account">Already Have Account</string>

    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="label_exit_profile">Exit profile</string>
    <string name="label_profile">Profile</string>
    <string name="btn_save">Save</string>

</resources>