<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="@dimen/_20sdp"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_in"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/_15sdp"/>


    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/color_text"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_15ssp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/color_text"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textSize="@dimen/_15ssp"/>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/button_signup_background"
        android:padding="@dimen/_12sdp"
        android:text="@string/btn_sign_in"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/btn_sign_up"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"/>

</LinearLayout>